feat: event modules init: benchmark