@@ -6,7 +6,7 @@
 
     <groupId>net.treleas</groupId>
     <artifactId>context-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <name>Context Parent</name>
@@ -14,15 +14,19 @@
 
     <modules>
         <module>context-core</module>
-        <module>context-fastutil</module>
-        <module>context-lmbda</module>
+        <module>context-di</module>
+        <module>context-di-fastutil</module>
+        <module>context-di-lmbda</module>
+        <module>context-event</module>
+        <module>context-event-disruptor</module>
+        <module>context-event-fastutil</module>
         <module>context-bom</module>
     </modules>
 
     <scm>
         <connection>scm:git:https://github.com/treleas/context.git</connection>
         <developerConnection>scm:git:https://github.com/treleas/context.git</developerConnection>
-        <tag>v2.0</tag>
+        <tag>v1.0</tag>
         <url>scm:https://github.com/treleas/context/</url>
     </scm>
 
@@ -46,9 +50,17 @@
                 </repository>
             </distributionManagement>
         </profile>
+
+        <profile>
+            <id>benchmark</id>
+            <modules>
+                <module>context-benchmark</module>
+            </modules>
+        </profile>
     </profiles>
 
     <properties>
+        <revision>1.0.0-SNAPSHOT</revision>
         <maven.compiler.source>25</maven.compiler.source>
         <maven.compiler.target>25</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -62,6 +74,8 @@
         <jupiter.version>6.0.3</jupiter.version>
         <mockito.version>5.23.0</mockito.version>
         <assertj.version>3.27.7</assertj.version>
+        <!--benchmarks-->
+        <jmh.version>1.37</jmh.version>
     </properties>
 
     <dependencyManagement>
@@ -75,6 +89,11 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-nop</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>
             <dependency>
@@ -107,6 +126,17 @@
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>${assertj.version}</version>
+            </dependency>
+            <!--benchmarks-->
+            <dependency>
+                <groupId>org.openjdk.jmh</groupId>
+                <artifactId>jmh-core</artifactId>
+                <version>${jmh.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjdk.jmh</groupId>
+                <artifactId>jmh-generator-annprocess</artifactId>
+                <version>${jmh.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -156,6 +186,16 @@
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.4.2</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>3.6.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.5.5</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -167,6 +207,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
